# mkdocs_rich_argparse

./: .copier-answers.yml  .gitignore  CITATION.cff  CONTRIBUTING.md  README.dev.md  README.md  project_setup.md  pyproject.toml
.github/workflows/: build.yml  next_steps.yml  next_steps_citation_issue.md  next_steps_linting_issue.md
example/: README.md  parser.py
src/mkdocs_rich_argparse/: __init__.py  my_module.py
tests/: test_my_module.py  test_plugin.py
